--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
   <!-- Fun Links Section -->
   <section>
-    <h2>Fun Links</h2>
+    <h2>Links</h2>
     <div class="cards">
       <div class="card"><a href="https://chatgpt.com/" target="_blank">🤖 ChatGPT</a></div>   
       <div class="card"><a href="https://www.linkedin.com/mynetwork/grow/" target="_blank">💼 LinkedIn</a></div>
