--- a/fitness.html
+++ b/fitness.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+   <!-- Navigation Bar -->
+<nav style="background-color:#333;padding:10px;">
+  <a href="index.html" style="color:white;margin-right:10px;text-decoration:none;">Home</a>
+  <a href="about.html" style="color:white;margin-right:10px;text-decoration:none;">About</a>
+  <a href="contact.html" style="color:white;margin-right:10px;text-decoration:none;">Contact</a>
+</nav>
+  
   <!-- Main Heading -->
   <h1>Fitness Hub</h1>
 
