--- a/fitness.html
+++ b/fitness.html
@@ -10,9 +10,9 @@
 
    <!-- Navigation Bar -->
 <nav style="background-color:#333;padding:10px;">
-  <a href="index.html" style="color:white;margin-right:10px;text-decoration:none;">Home</a>
-  <a href="about.html" style="color:white;margin-right:10px;text-decoration:none;">About</a>
-  <a href="contact.html" style="color:white;margin-right:10px;text-decoration:none;">Contact</a>
+  <a href="finance.html" style="color:white;margin-right:10px;text-decoration:none;">Finance</a>
+  <a href="music.html" style="color:white;margin-right:10px;text-decoration:none;">Music</a>
+  <a href="faith.html" style="color:white;margin-right:10px;text-decoration:none;">Faith</a>
 </nav>
   
   <!-- Main Heading -->
