--- a/finance.html
+++ b/finance.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+   <!-- Navigation Bar -->
+<nav style="background-color:#333;padding:10px;">
+  <a href="fitness.html" style="color:white;margin-right:10px;text-decoration:none;">Fitness</a>
+  <a href="music.html" style="color:white;margin-right:10px;text-decoration:none;">Music</a>
+  <a href="faith.html" style="color:white;margin-right:10px;text-decoration:none;">Faith</a>
+</nav>
+  
   <!-- Main Heading -->
   <h1>Finance Hub</h1>
 
