--- a/faith.html
+++ b/faith.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+     <!-- Navigation Bar -->
+<nav style="background-color:#333;padding:10px;">
+  <a href="finance.html" style="color:white;margin-right:10px;text-decoration:none;">Finance</a>
+  <a href="music.html" style="color:white;margin-right:10px;text-decoration:none;">Music</a>
+  <a href="fitness.html" style="color:white;margin-right:10px;text-decoration:none;">Fitness</a>
+</nav>
+
   <!-- Main Heading -->
   <h1>Faith Hub</h1>
 
