--- a/music.html
+++ b/music.html
@@ -104,6 +104,7 @@
 
       insertRow(name, artist, rating, year);
       albumName.value = artistName.value = albumRating.value = albumYear.value = '';
+      albumName.focus();
       updateCounts();
       updateYearFilter();
     }
