--- a/music.html
+++ b/music.html
@@ -8,7 +8,7 @@
   <style>
     /* Highlight sorted column */
     .highlighted {
-      background-color: #e0f7fa;
+      background-color: #4a148c;
       transition: background-color 0.3s;
     }
   </style>
