--- a/music.html
+++ b/music.html
@@ -8,7 +8,7 @@
   <style>
     /* Highlight sorted column */
     .highlighted {
-      background-color: #4a148c;
+      background-color: rgba(74,20,140,0.7); /* semi-transparent dark purple */
       transition: background-color 0.3s;
     }
   </style>
