--- a/music.html
+++ b/music.html
@@ -15,6 +15,13 @@
 </head>
 <body>
 
+   <!-- Navigation Bar -->
+<nav style="background-color:#333;padding:10px;">
+  <a href="fitness.html" style="color:white;margin-right:10px;text-decoration:none;">Fitness</a>
+  <a href="finance.html" style="color:white;margin-right:10px;text-decoration:none;">Finance</a>
+  <a href="faith.html" style="color:white;margin-right:10px;text-decoration:none;">Faith</a>
+</nav>
+  
   <!-- Main Heading -->
   <h1>Music Hub</h1>
 
